# stage_mulActor

./: .gitignore  README.md  config.py  main.py  pyproject.toml
Definition/: modelisation.py
Definition/Acteurs/: consommateur.py  prod_SMR.py  prod_electrolyse.py
Donnees/: data.py  data_sample.csv
Resolution/: goal_programming.py  max_min_satisfaction.py  optim_individuelle.py  point_nadir.py
Utils/: plotting.py  rapport_latex.py  utils.py
